--- a/html_template/index.html
+++ b/html_template/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Simple Counter Application</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <!-- import redux from cdn -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.1.2/redux.min.js"></script>
+
     </head>
     <body>
         <div class="w-screen h-screen p-10 bg-gray-100 text-slate-700">
@@ -19,14 +22,14 @@
                 <div
                     class="p-4 h-auto flex flex-col items-center justify-center space-y-5 bg-white rounded shadow"
                 >
-                    <div class="text-2xl font-semibold">0</div>
+                    <div id="counter" class="text-2xl font-semibold">0</div>
                     <div class="flex space-x-3">
-                        <button
+                        <button id="increment"
                             class="bg-indigo-400 text-white px-3 py-2 rounded shadow"
                         >
                             Increment
                         </button>
-                        <button
+                        <button id="decrement"
                             class="bg-red-400 text-white px-3 py-2 rounded shadow"
                         >
                             Decrement
